// Works with Gradle 5.7 and Java 12

// To run this do:
// ./gradlew run

// To build a distribution zip:
// ./gradlew distZip

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.beryx.jlink' version '2.22.3'



}

sourceCompatibility = 11
targetCompatibility = 11

version = '0.0.1'
group = 'ehu.isad'

java {
    modularity.inferModulePath.set(true)
}

application {
    mainModule = 'oinarria' // name defined in module-info.java
    mainClass = 'ehu.isad.Main'
}



// ext.moduleName = 'gradlejavafxhelloworld'
mainClassName = "$moduleName/ehu.isad.Main"


javafx {
    version = "12"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.web','javafx.graphics' ]
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
    compile 'io.github.typhon0:AnimateFX:1.2.0'
    compile group: 'org.openjfx', name: 'javafx-graphics', version: '16-ea+5'
    compile group: 'org.openjfx', name: 'javafx-base', version: '16-ea+5'

}



jlink {
    addExtraDependencies("javafx")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'whatwebfx'

        jvmArgs = ['--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',
                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
        ]
    }

    jpackage {
        jpackageHome="/home/ibai/.sdkman/candidates/java/14.0.2.fx-zulu"

        if (javafx.getPlatform().name() == "WINDOWS") {
            installerType = "exe"
            jpackageHome = "C:\\Users\\34636\\.jdks\\openjdk-14.0.2"
            installerOptions = ['--win-menu', '--win-shortcut', '--win-dir-chooser']
        }
        else {
            installerType = "deb"
            jpackageHome = "/home/ibai/.sdkman/candidates/java/14.0.2.fx-zulu"
        }
    }
}




repositories {
    mavenCentral()

}

def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',
               '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]

run {
    inputs.property('moduleName', moduleName)
    doFirst {
        jvmArgs = jvmArgs.plus(newArgs)
        jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,
                                '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
                                '--module', "$mainClassName",
        ])
        classpath = files()
    }
}



run {
    standardInput = System.in
}
